@@ -1,5 +1,5 @@
 AUX configure.py.patch 1409 RMD160 f8a2b0c92fc53756679cff39d366b34cfb5b6d72 SHA1 c2cb0478de7d4f29c4db656f824b4dfce742209d SHA256 c80ecf0323ba47e14ac7e9941cf640a6ae552ad558001984097a8a33861028bd
 DIST PyQt-x11-gpl-4.7-snapshot-20091028.tar.gz 1309339 RMD160 c07cec49dad3a2cef5552205b3698f71c98f1c8a SHA1 f35af916bf61070111b51f2ad44a0a64bdfd338e SHA256 d239779e9364cbe38d05f6be70729dc541bbba0d6770dd5145cbe3d3fbf5f1a5
-EBUILD PyQt4-4.7_pre20091028.ebuild 3868 RMD160 878771bbe0cc019bd842c463acff9cca9ce33cf8 SHA1 54cc48baf171fa21beab68757a5f9031b16d59dd SHA256 275b24b48378e41e51d13c8a56101acb73f4d51117d9ea05929e03e88321e6be
-MISC ChangeLog 12269 RMD160 9d9c4b793ed7e52d7e988494906386c99937bb97 SHA1 281eceaf2bd85796c5dd7202fb7bfd959b7b61ab SHA256 f1e149935a8cb81ccef1562ef994b7e8898ddac622adfbda7087f44a75dc611c
+EBUILD PyQt4-4.7_pre20091028.ebuild 3860 RMD160 731339b8f4d995b01f71589aff4616970819ecf7 SHA1 182d808563b3c8eb996ac626bb0360c303335e12 SHA256 35dc057ca6a1dd85f083e43e825151629e32429a581f929996194224888b6c0c
+MISC ChangeLog 12403 RMD160 ab66d7d64e3bc21dfd285a2d9319cf409f9d6e7a SHA1 8bf0a1c5f76443dfa94ca2c15905bc1e4a5bd8a0 SHA256 1d89b71097b3f4e707e86843f8c346244a4893b7f4093d4ed4a76c6f3928e20f
 MISC metadata.xml 784 RMD160 f98352d1efdc46ce85fa86a251e0334953953171 SHA1 8dcecbf0e4091ab3b8387523ec06a602a01821a3 SHA256 dd8004eeba543eba4dbc1f4ab6a3693c12d1185e9b33d028efd495f80ba18476
